# dictionary-normalizer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  released-version-hashes.json  requirements-dev.txt  sources.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
input/: PROVENANCE.md  extract.py  summarize.py
input/corpora/: decorative-stones.txt  egyptian-gods.txt  greek-gods.txt  greek-monsters.txt  greek-titans.txt  metals.txt  minor-planets.txt  neutral-names.txt  norse-gods.txt  oceans.txt  planets.txt  rivers.txt  roman-deities.txt  scientists.txt  tolkien.txt  winds.txt
input/docker-moby/: adjectives.txt  surnames.txt
input/haikunator/: adjectives.txt  nouns.txt
input/iau-star-names/: star-names.txt
scripts/: decode-blocked-words.py  prepare-release.py  release.py  tag-release.py
src/dictionary_normalizer/: __init__.py  artifact.py  cli.py  errors.py  manifest.py  normalizer.py  parsers.py  released.py  validator.py
src/dictionary_normalizer/data/: blocked-server-words.txt
tests/: _fixtures.py  test_artifact_cli.py  test_e2e.py  test_manifest.py  test_normalizer.py  test_parsers.py  test_validator.py
